--- a/src/componentes/elements/Card.module.css
+++ b/src/componentes/elements/Card.module.css
@@ -1,18 +1,19 @@
 .card{
     display: flex;
-    justify-content: center;
-    margin: 15px;
+    margin: 15px 0 15px 20vw;
+    position: relative;
 }
 
 .card img{
     width: 400px;
     margin-right: 15px;
+    transition: transform 0.3s ease;
 }
 
 .card img:hover{
     transform: translateY(-10px);
+    transform: translateX(-50px);
     cursor: pointer;
-    transition-duration: 2s;
 }
 
 .card section{
@@ -21,7 +22,19 @@
     border-radius: 20px;
     width: 500px;
     filter: drop-shadow(0px 4px 4px rgba(0,0, 0.25, 0.25));
+    transition: transform 0.3s ease, visibility 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 30vw;
 }
+
+.card:hover section {
+    opacity: 1; 
+    visibility: visible;
+    transform: translateX(-10px);
+  }
 
 .card h3{
     font-size: 25px;
